// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ERC721TokenTransferModal.vue > Should not show the wallet connection button if not public explorer 1`] = `
"<div class="v-dialog-stub" max-width="600">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title text-h5">Transfer My Token #1</div>
    <form class="v-form" novalidate="">
      <div class="v-card-text">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div>Owner: <hash-link-stub type="address" hash="0xabc" fullhash="true" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
        </div>
        <wallet-connector-mirror-stub prependicon="mdi-wallet" rounded="" size="small" variant="outlined"></wallet-connector-mirror-stub>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-text-field mt-5">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--center-affix v-field--prepended v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <div class="v-field__prepend-inner"><i class="mdi-arrow-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
                <!---->
              </div>
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="recipient">
                  <!---->Recipient Address
                </label>
                <!----><input size="1" type="text" id="recipient" aria-describedby="recipient-messages" small="" class="v-field__input">
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="recipient">
                    <!---->Recipient Address
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <div id="recipient-messages" class="v-input__details" role="alert" aria-live="polite">
            <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
              <!---->
            </transition-group-stub>
            <!---->
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class="v-card-actions">
        <div class="v-spacer"></div><button type="button" class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Close</span>
          <!---->
          <!---->
        </button><button type="button" class="v-btn v-btn--disabled v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat" disabled="" id="transferToken"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transfer Token</span>
          <!---->
          <!---->
        </button>
      </div>
    </form>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`ERC721TokenTransferModal.vue > Should send a transation with Metamask 1`] = `
"<div class="v-dialog-stub" max-width="600">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title text-h5">Transfer My Token #1</div>
    <form class="v-form" novalidate="">
      <div class="v-card-text">
        <div class="v-alert v-theme--light bg-success v-alert--density-compact v-alert--variant-flat mb-3" role="alert">Transfer transaction sent: <a class="white--text" href="/transaction/0x1234">0x1234</a></div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div>Owner: <hash-link-stub type="address" hash="0xabc" fullhash="true" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
        </div>
        <div>Connected account: <hash-link-stub type="address" hash="0x1bF85ED48fcda98e2c7d08E4F2A8083fb18792AA" fullhash="true" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
        </div>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field mt-5">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--prepended v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <div class="v-field__prepend-inner"><i class="mdi-arrow-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
                <!---->
              </div>
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="recipient">
                  <!---->Recipient Address
                </label>
                <!----><input size="1" type="text" id="recipient" aria-describedby="recipient-messages" small="" class="v-field__input" value="0x29ea412cc10a9cfc08c2298f382b2fe01e6ca83b">
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="recipient">
                    <!---->Recipient Address
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <div id="recipient-messages" class="v-input__details" role="alert" aria-live="polite">
            <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
              <!---->
            </transition-group-stub>
            <!---->
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class="v-card-actions">
        <div class="v-spacer"></div><button type="button" class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Close</span>
          <!---->
          <!---->
        </button><button type="button" class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat" id="transferToken"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transfer Token</span>
          <!---->
          <!---->
        </button>
      </div>
    </form>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`ERC721TokenTransferModal.vue > Should show the wallet connection button if public explorer 1`] = `
"<div class="v-dialog-stub" max-width="600">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title text-h5">Transfer My Token #1</div>
    <form class="v-form" novalidate="">
      <div class="v-card-text">
        <!--v-if-->
        <!--v-if-->
        <div class="v-alert v-theme--light bg-warning v-alert--density-compact v-alert--variant-flat mb-3" role="alert">
          <!----><span class="v-alert__underlay"></span>
          <!---->
          <div class="v-alert__prepend"><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light" style="font-size: 28px; height: 28px; width: 28px;" aria-hidden="true" density="compact"></i></div>
          <div class="v-alert__content">
            <!---->
            <!---->The connected account is not the owner of this token.
          </div>
          <!---->
          <!---->
        </div>
        <!--v-if-->
        <div>Owner: <hash-link-stub type="address" hash="0xabc" fullhash="true" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
        </div>
        <div>
          <div><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--rounded v-btn--size-small v-btn--variant-outlined"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span><span class="v-btn__prepend"><i class="mdi-wallet mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i></span><span class="v-btn__content" data-no-activator="">Connect Wallet</span>
              <!---->
              <!---->
            </button></div>
        </div>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-text-field mt-5">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--center-affix v-field--prepended v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <div class="v-field__prepend-inner"><i class="mdi-arrow-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
                <!---->
              </div>
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="recipient">
                  <!---->Recipient Address
                </label>
                <!----><input size="1" type="text" id="recipient" aria-describedby="recipient-messages" small="" class="v-field__input">
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="recipient">
                    <!---->Recipient Address
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <div id="recipient-messages" class="v-input__details" role="alert" aria-live="polite">
            <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
              <!---->
            </transition-group-stub>
            <!---->
          </div>
        </div>
        <!--v-if-->
      </div>
      <div class="v-card-actions">
        <div class="v-spacer"></div><button type="button" class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Close</span>
          <!---->
          <!---->
        </button><button type="button" class="v-btn v-btn--disabled v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat" disabled="" id="transferToken"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transfer Token</span>
          <!---->
          <!---->
        </button>
      </div>
    </form>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`ERC721TokenTransferModal.vue > Should successfully impersonate the account & call the transfer function 1`] = `
"<div class="v-dialog-stub" max-width="600">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-card-title text-h5">Transfer My Token #1</div>
    <form class="v-form" novalidate="">
      <div class="v-card-text">
        <div class="v-alert v-theme--light bg-success v-alert--density-compact v-alert--variant-flat mb-3" role="alert">Token transferred successfully!</div>
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div>Owner: <hash-link-stub type="address" hash="0xabc" fullhash="true" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub>
        </div>
        <wallet-connector-mirror-stub prependicon="mdi-wallet" rounded="" size="small" variant="outlined"></wallet-connector-mirror-stub>
        <div class="v-input v-input--horizontal v-input--center-affix v-input--density-compact v-theme--light v-locale--is-ltr v-input--dirty v-text-field mt-5">
          <!---->
          <div class="v-input__control">
            <div class="v-field v-field--active v-field--center-affix v-field--dirty v-field--prepended v-field--variant-outlined v-theme--light v-locale--is-ltr">
              <div class="v-field__overlay"></div>
              <div class="v-field__loader">
                <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
                  <!---->
                  <div class="v-progress-linear__background"></div>
                  <div class="v-progress-linear__buffer" style="width: 0%;"></div>
                  <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
                    <div class="v-progress-linear__indeterminate">
                      <div class="v-progress-linear__indeterminate long"></div>
                      <div class="v-progress-linear__indeterminate short"></div>
                    </div>
                  </transition-stub>
                  <!---->
                </div>
              </div>
              <div class="v-field__prepend-inner"><i class="mdi-arrow-right mdi v-icon notranslate v-theme--light v-icon--size-default" aria-hidden="true"></i>
                <!---->
              </div>
              <div class="v-field__field" data-no-activator="">
                <!----><label class="v-label v-field-label" for="recipient">
                  <!---->Recipient Address
                </label>
                <!----><input size="1" type="text" id="recipient" aria-describedby="recipient-messages" small="" class="v-field__input" value="0x29ea412cc10a9cfc08c2298f382b2fe01e6ca83b">
                <!---->
              </div>
              <!---->
              <!---->
              <div class="v-field__outline">
                <div class="v-field__outline__start"></div>
                <div class="v-field__outline__notch"><label class="v-label v-field-label v-field-label--floating" aria-hidden="true" for="recipient">
                    <!---->Recipient Address
                  </label></div>
                <div class="v-field__outline__end"></div>
                <!---->
              </div>
            </div>
          </div>
          <!---->
          <div id="recipient-messages" class="v-input__details" role="alert" aria-live="polite">
            <transition-group-stub name="slide-y-transition" tag="div" appear="false" persisted="false" css="true" class="v-messages">
              <!---->
            </transition-group-stub>
            <!---->
          </div>
        </div><span class="align-right"> Transaction: <i class="mdi-check-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-success-lighten-1 mr-1 align-with-text" aria-hidden="true"></i><i class="mdi-alert-circle mdi v-icon notranslate v-theme--light v-icon--size-small text-error-lighten-1 mr-1 align-with-text" aria-hidden="true" style="display: none;"></i><hash-link-stub type="transaction" hash="0xdef" fullhash="false" withname="true" notcopiable="false" withtokenname="false" xshash="false" unlink="false" loadcontract="false"></hash-link-stub></span>
      </div>
      <div class="v-card-actions">
        <div class="v-spacer"></div><button type="button" class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Close</span>
          <!---->
          <!---->
        </button><button type="button" class="v-btn v-btn--slim v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-flat" id="transferToken"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
          <!----><span class="v-btn__content" data-no-activator="">Transfer Token</span>
          <!---->
          <!---->
        </button>
      </div>
    </form>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
